--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
     name="description"
     content="Undelry（ウンデリー）は、“想像が動き出す”球体ロボット MARIMO をテーマに、小さな試作と実験を続けている高専生三人の学生プロジェクトです。"
   />
+  <meta property="og:title" content="Undelry - 脳波 × 形 × ロボット" />
+<meta property="og:description" content="脳波で思い描いた形をもとに、球体ユニットが立体構造をつくる MARIMO コンセプト。" />
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://kmc2525-beep.github.io/undelry/" />
+<meta property="og:image" content="https://kmc2525-beep.github.io/undelry/ogp.png" />
+
   <!-- フォント -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
