--- a/index.html
+++ b/index.html
@@ -943,8 +943,8 @@
             <div class="block-body">
               <ul class="link-list">
                 <!-- ★ 公開前にここを書き換えてください -->
-                <li>メール：<a href="mailto:info@example.com">info@example.com</a></li>
-                <li>X（Twitter）：<a href="#" target="_blank" rel="noopener noreferrer">@undelry</a></li>
+                <li>メール：<a href="mailto:unelry@gmail.com">undelry@gmail.com</a></li>
+                <li>X（Twitter）：<a href="#" target="_blank" rel="noopener noreferrer">https://x.com/r6oPruDWoH63532</a></li>
                 <li>note：<a href="https://note.com/joe_maekawa" target="_blank" rel="noopener noreferrer">/joe_maekawa</a></li>
               </ul>
               <p class="contact-note">
