--- a/index.html
+++ b/index.html
@@ -938,21 +938,20 @@
           </div>
 
           <div class="block">
-            <div class="block-label">CONTACT</div>
-            <div class="block-title">お問い合わせ・壁打ちのご相談</div>
-            <div class="block-body">
-              <ul class="link-list">
-                <!-- ★ 公開前にここを書き換えてください -->
-                <li>メール：<a href="mailto:unelry@gmail.com">undelry@gmail.com</a></li>
-                <li>X（Twitter）：<a href="#" target="_blank" rel="noopener noreferrer">https://x.com/r6oPruDWoH63532</a></li>
-                <li>note：<a href="https://note.com/joe_maekawa" target="_blank" rel="noopener noreferrer">/joe_maekawa</a></li>
-              </ul>
-              <p class="contact-note">
-                高専生三人だけでは見えない視点がたくさんあります。  
-                「ちょっと気になった」くらいの軽い温度感でも、メッセージをもらえるととても助かります。
-              </p>
-            </div>
-          </div>
+  <div class="block-label">CONTACT</div>
+  <div class="block-title">お問い合わせ・壁打ちのご相談</div>
+  <div class="block-body">
+    <ul class="link-list">
+      <li>メール：<a href="mailto:undelry@gmail.com">undelry@gmail.com</a></li>
+      <li>X（Twitter）：<a href="https://x.com/r6oPruDWoH63532" target="_blank" rel="noopener noreferrer">@r6oPruDWoH63532</a></li>
+      <li>note：<a href="https://note.com/joe_maekawa" target="_blank" rel="noopener noreferrer">note.com/joe_maekawa</a></li>
+    </ul>
+    <p class="contact-note">
+      高専生三人だけでは届かない視点がまだまだたくさんあります。<br>
+      「ちょっと気になった」程度の温度感でも、メッセージをいただけるととても嬉しいです。
+    </p>
+  </div>
+</div>
         </div>
       </div>
       <!-- 点線パターン -->
